--- a/galaxy/moksha-theme-kl4k/.artixlinux/pkgbase.yaml
+++ b/galaxy/moksha-theme-kl4k/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: galaxy
-pkgbase:
-  name: moksha-theme-kl4k
-  version: 0.3.8-9
-  arch:
-    - any
-  pkgname:
-    - moksha-theme-kl4k
 actions:
   addRepo: galaxy
   removeRepo: galaxy-gremlins
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 0.3.8-9
+    version: 0.3.8-10
     packages:
-      - moksha-theme-kl4k-0.3.8-9-any.pkg.tar.zst
+      - moksha-theme-kl4k-0.3.8-10-any.pkg.tar.zst
+    debug: []
