--- a/galaxy/qt6gtk2/.artixlinux/pkgbase.yaml
+++ b/galaxy/qt6gtk2/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: qt6gtk2
-  version: 0.4-1
-  arch:
-    - any
-  pkgname:
-    - qt6gtk2
 actions:
   addRepo: galaxy
   removeRepo: galaxy-gremlins
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 0.4-1
+    version: 0.4-1.1
     packages:
-      - qt6gtk2-0.4-1-any.pkg.tar.zst
+      - qt6gtk2-0.4-1.1-any.pkg.tar.zst
+    debug: []
 team: galaxy
