--- a/world/neovim/.artixlinux/pkgbase.yaml
+++ b/world/neovim/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: neovim
-  version: 0.11.1-2
-  arch:
-    - x86_64
-  pkgname:
-    - neovim
 actions:
   addRepo: world
   removeRepo: null
@@ -18,38 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
-    version: null
-    packages: []
-  world:
-    version: 0.11.1-2
+    version: 0.11.2-2
     packages:
-      - neovim-0.11.1-2-x86_64.pkg.tar.zst
+      - neovim-0.11.2-2-x86_64.pkg.tar.zst
+    debug: []
+  world:
+    version: 0.11.2-3
+    packages:
+      - neovim-0.11.2-3-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
