--- a/world/neovim/PKGBUILD
+++ b/world/neovim/PKGBUILD
@@ -5,8 +5,8 @@
 # Contributor: Florian Hahn <flo@fhahn.com>
 
 pkgname=neovim
-pkgver=0.11.1
-pkgrel=2
+pkgver=0.11.2
+pkgrel=3
 pkgdesc='Fork of Vim aiming to improve user experience, plugins, and GUIs'
 arch=(x86_64)
 url=https://neovim.io
@@ -52,15 +52,16 @@ backup=(etc/xdg/nvim/sysinit.vim)
 source=(
   "git+https://github.com/neovim/neovim.git#tag=v$pkgver"
   nvimdoc{,.hook}
+  0001-build-deps-bump-tree-sitter-vim-to-v0.6.0.patch
 )
-sha512sums=('7ae698ec37fbee38d57eb5ce48f9264fbb8ca25ca6d857203d4316fa5e50060b855f657d5a3705990d749f359cd6e907865c024fd29a47aa3a9d8d8769647c4a'
+sha512sums=('44029d443a4407e2061aa3b0d3ff6f163e2b2a1c9ccdb4482378141dfa901076a8068f75ea02b1b1d3f8e8dba20e24cd20640fb0fc09ea7647fea5c04cac35da'
             '22662462c823de243599cdd3483e46ade4ab59b219e907468d34c18e584fe7477548e357ee2ce56bb098cf54b770b108a3511703dd486f0774a65c84af78f6aa'
-            '3c6ee1e4646d09c164a2212f9e4d2f53158ff32911b0972e060a395a8d4685334574a7ede995a81680dcc0750cd3327a78beb7904a4bb326b2399d79a8b12d5e')
+            '3c6ee1e4646d09c164a2212f9e4d2f53158ff32911b0972e060a395a8d4685334574a7ede995a81680dcc0750cd3327a78beb7904a4bb326b2399d79a8b12d5e'
+            '11eff795d8012ade867e9e084ec0f680de0eb67297bb4c6049d6ae5461fd2b31fa4aa124bb0a53ca6b5244e976b3af5d94ebcc5a035b0dcb897a722344d1b63b')
 
-# Revert "fix(desktop): cannot open filename with spaces using OS file manager" #33684
 prepare() {
   cd ${pkgname}
-  git cherry-pick --no-commit f9c7a69cec5a5cd229e77a66ccca841903ef6d8f
+  patch --forward --strip=1 --input=../0001-build-deps-bump-tree-sitter-vim-to-v0.6.0.patch
 }
 
 build() {
