--- a/world/tree-sitter/.artixlinux/pkgbase.yaml
+++ b/world/tree-sitter/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: tree-sitter
-  version: 0.25.3-1
-  arch:
-    - x86_64
-  pkgname:
-    - tree-sitter
-    - tree-sitter-cli
 actions:
   addRepo: world
   removeRepo: null
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 0.25.3-1
+    version: 0.25.6-1
     packages:
-      - tree-sitter-0.25.3-1-x86_64.pkg.tar.zst
-      - tree-sitter-cli-0.25.3-1-x86_64.pkg.tar.zst
+      - tree-sitter-0.25.6-1-x86_64.pkg.tar.zst
+      - tree-sitter-cli-0.25.6-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
