--- a/world/tree-sitter-vimdoc/.artixlinux/pkgbase.yaml
+++ b/world/tree-sitter-vimdoc/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: world
-pkgbase:
-  name: tree-sitter-vimdoc
-  version: 3.0.0-1
-  arch:
-    - x86_64
-  pkgname:
-    - tree-sitter-vimdoc
 actions:
   addRepo: world
   removeRepo: null
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 3.0.0-1
+    version: 4.0.0-1
     packages:
-      - tree-sitter-vimdoc-3.0.0-1-x86_64.pkg.tar.zst
+      - tree-sitter-vimdoc-4.0.0-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
