--- a/world/i2pd/PKGBUILD
+++ b/world/i2pd/PKGBUILD
@@ -1,4 +1,5 @@
-# Maintainer: Daniel Bermond <dbermond@archlinux.org>
+# Maintainer: Cory Sanin <corysanin@artixlinux.org>
+# Contributor: Daniel Bermond <dbermond@archlinux.org>
 # Contributor: robertfoster
 # Contributor: kurych
 # Contributor: redfish
@@ -9,14 +10,23 @@
 # Contributor: r4sas
 
 pkgname=i2pd
-pkgver=2.56.0
-pkgrel=2
+pkgver=2.57.0
+pkgrel=1
 pkgdesc='A full-featured C++ implementation of the I2P router'
 arch=('x86_64')
 url='https://i2pd.website/'
 license=('BSD-3-Clause')
-depends=('boost-libs' 'libminiupnpc.so' 'openssl' 'zlib')
-makedepends=('cmake' 'boost' 'check')
+depends=(
+    'boost-libs'
+    'gcc-libs'
+    'glibc'
+    'libminiupnpc.so'
+    'openssl'
+    'zlib')
+makedepends=(
+    'boost'
+    'check'
+    'cmake')
 provides=('i2p-router')
 backup=('etc/i2pd/i2pd.conf'
         'etc/i2pd/tunnels.conf'
@@ -26,13 +36,17 @@ source=("https://github.com/PurpleI2P/i2pd/archive/${pkgver}/${pkgname}-${pkgver
         '010-i2pd-config.patch'
         '020-i2pd-do-not-override-config.patch'
         '040-i2pd-tunnels-d-readme.patch'
+        '050-i2pd-fix-test-base-64.patch'::'https://github.com/PurpleI2P/i2pd/commit/37fd4b4422cc0c1fbe8321d4de9fcaaff2220cdc.patch'
+        '060-i2pd-fix-test-http-res.patch'::'https://github.com/PurpleI2P/i2pd/commit/6ad6a2501eac86623db303bceee70a1989e538e6.patch'
         'i2pd.sysusers'
         'i2pd.tmpfiles')
-sha256sums=('eb83f7e98afeb3704d9ee0da2499205f73bab0b1becaf4494ccdcbe4295f8550'
+sha256sums=('e2327f816d92a369eaaf9fd1661bc8b350495199e2f2cb4bfd4680107cd1d4b4'
             '2ddf15f1c1cdf5d747a0af667145238023fd126ab00c65f2897cacae935015b1'
             'ed1bde650139731921bf3c8091b3332620404e7700fb9c486a4a806fe34e2d3b'
-            '805a82f23c244afbdfae0a4f30d1707301bc0e23437f83d1c84f13c33f62ea28'
+            '3168e9bc1b15885b1658fac6efcd0741f7f82b571798380ecffa54eaa84aadde'
             'cfcb6b07b67aff3e3af12767f4649d88b9320dc71907b6c01b465e5c138cdaa3'
+            'be18e499e2c6773de242d43a868a4719a44f3f5ce2806ffadb66d6d9028732c9'
+            '48afbf1f54e877d2cb0aa51b9f5214800e4f43b8134de87b0aca884331af6347'
             '2f91fd455ea801df9a9bcc5f3f83def231d9149eec8b206588c8be21654e5b7c'
             'fe8cc2ec83cb5b5c2b2ec8cce9a989e0cb6fd347e00b84e03a17b12efd152fac')
 
@@ -41,6 +55,12 @@ prepare() {
     patch -d "${pkgname}-${pkgver}" -Np1 -i "${srcdir}/010-i2pd-config.patch"
     patch -d "${pkgname}-${pkgver}" -Np1 -i "${srcdir}/020-i2pd-do-not-override-config.patch"
     patch -d "${pkgname}-${pkgver}" -Np1 -i "${srcdir}/040-i2pd-tunnels-d-readme.patch"
+    
+    # https://github.com/PurpleI2P/i2pd/pull/2195
+    patch -d "${pkgname}-${pkgver}" -Np1 -i "${srcdir}/050-i2pd-fix-test-base-64.patch"
+    
+    # https://github.com/PurpleI2P/i2pd/issues/2196
+    patch -d "${pkgname}-${pkgver}" -Np1 -i "${srcdir}/060-i2pd-fix-test-http-res.patch"
 }
 
 build() {
