--- a/world/ktextaddons/PKGBUILD
+++ b/world/ktextaddons/PKGBUILD
@@ -1,100 +1,47 @@
-# Maintainer: Cory Sanin <corysanin@artixlinux.org>
-# Contributor: Antonio Rojas <arojas@archlinux.org>
+# Maintainer: Antonio Rojas <arojas@archlinux.org>
 
-pkgbase=ktextaddons
-pkgname=(ktextaddons
-         ktextaddons5)
-pkgver=1.5.4
+pkgname=ktextaddons
+pkgver=1.6.0
 pkgrel=1
 pkgdesc='Various text handling addons'
 arch=(x86_64)
-license=(GPL)
+license=(GPL-2.0-or-later)
 url='https://invent.kde.org/libraries/ktextaddons'
 depends=(gcc-libs
-         glibc)
+         glibc
+         karchive
+         kcolorscheme
+         kconfig
+         kcoreaddons
+         ki18n
+         kio
+         ktextwidgets
+         kwidgetsaddons
+         qt6-base
+         qt6-speech
+         qtkeychain-qt6
+         sonnet
+         syntax-highlighting)
 makedepends=(doxygen
              extra-cmake-modules
-             karchive
-             kconfig
-             kconfigwidgets
-             ki18n
-             kio
-             ktextaddons
-             kwidgetsaddons
-             kxmlgui
-             qt6-base
              qt6-doc
-             qt6-speech
-             qt6-tools
-             qtkeychain-qt6
-             sonnet
-             syntax-highlighting
-             karchive5
-             kconfig5
-             kconfigwidgets5
-             ki18n5
-             kio5
-             kwidgetsaddons5
-             qt5-base
-             qt5-doc
-             qt5-speech
-             qt5-tools
-             qtkeychain-qt5
-             sonnet5
-             syntax-highlighting5)
+             qt6-tools)
 optdepends=('languagetool: Grammar checking'
             'grammalecte: French grammar checking'
             'libreoffice: Use autocorrection data from LibreOffice')
-source=(https://download.kde.org/stable/$pkgname/$pkgbase-$pkgver.tar.xz)
-sha256sums=('64b80602e84b25e9164620af3f6341fa865b85e826ab8f5e02061ae24a277b20')
+source=(https://download.kde.org/stable/$pkgname/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
+sha256sums=('d9846505a52f97bda64ead193032bc29573ec31481f473be3c586f5b8321ecdc'
+            'SKIP')
+validpgpkeys=(90A774939A973FF1ECC827788FFE4352ED54BB8A) # laurent Montel <montel@kde.org>
 
 build() {
-  artix-cmake -B build -S $pkgbase-$pkgver \
-    -DBUILD_TESTING=OFF \
-    -DBUILD_DESIGNERPLUGIN=ON \
-    -DBUILD_QCH=ON \
-    -DQT_MAJOR_VERSION=6
-  cmake --build build
-
-  artix-cmake -B build5 -S $pkgbase-$pkgver \
+  cmake -B build -S $pkgname-$pkgver \
     -DBUILD_TESTING=OFF \
     -DBUILD_DESIGNERPLUGIN=ON \
     -DBUILD_QCH=ON
-  cmake --build build5
+  cmake --build build
 }
 
-package_ktextaddons() {
-  depends+=(karchive
-            kcolorscheme
-            kconfig
-            kconfigwidgets
-            ki18n
-            kio  
-            kwidgetsaddons
-            qt6-base
-            qt6-speech
-            qtkeychain-qt6
-            sonnet
-            syntax-highlighting)
-
+package() {
   DESTDIR="$pkgdir" cmake --install build
-}
-
-package_ktextaddons5() {
-  depends+=(karchive5
-            kconfig5
-            kconfigwidgets5
-            ki18n5
-            kio5
-            kwidgetsaddons5
-            qt5-base
-            qt5-speech
-            qtkeychain-qt5
-            sonnet5
-            syntax-highlighting5)
-  conflicts=('ktextaddons<1.5.2-3')
-  replaces=('ktextaddons<1.5.2-3')
-
-  DESTDIR="$pkgdir" cmake --install build5
-  rm -r "$pkgdir"/usr/share/locale # Conflicts with Qt5 version
 }
