--- a/world/maturin/.artixlinux/pkgbase.yaml
+++ b/world/maturin/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: maturin
-  version: 1.8.3-1
-  arch:
-    - x86_64
-  pkgname:
-    - maturin
-    - python-maturin
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1.8.3-1
+    version: 1.8.6-1
     packages:
-      - maturin-1.8.3-1-x86_64.pkg.tar.zst
-      - python-maturin-1.8.3-1-x86_64.pkg.tar.zst
+      - maturin-1.8.6-1-x86_64.pkg.tar.zst
+      - python-maturin-1.8.6-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
