--- a/world/wireshark/.artixlinux/pkgbase.yaml
+++ b/world/wireshark/.artixlinux/pkgbase.yaml
@@ -1,57 +1,61 @@
 ---
-pkgbase:
-  name: wireshark
-  version: 4.4.6-2
-  arch:
-    - x86_64
-  pkgname:
-    - wireshark-cli
-    - wireshark-qt
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 4.4.6-2
+    version: 4.4.7-1
     packages:
-      - wireshark-cli-4.4.6-2-x86_64.pkg.tar.zst
-      - wireshark-qt-4.4.6-2-x86_64.pkg.tar.zst
+      - wireshark-cli-4.4.7-1-x86_64.pkg.tar.zst
+      - wireshark-qt-4.4.7-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
