--- a/world/wireshark/.nvchecker.toml
+++ b/world/wireshark/.nvchecker.toml
@@ -1,4 +1,4 @@
 [wireshark]
 source = "regex"
-url = "https://www.wireshark.org/download.html"
-regex = "current stable release of Wireshark is ([0-9\\.]+)\\."
+url = "https://www.wireshark.org/download/src/"
+regex = "wireshark-([0-9\\.]+)\\.tar.xz"
