--- a/world/kstars/PKGBUILD
+++ b/world/kstars/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kstars
-pkgver=3.7.6
+pkgver=3.7.7
 pkgrel=1
 epoch=1
 pkgdesc='Desktop Planetarium'
@@ -16,45 +16,50 @@ depends=(breeze-icons
          gcc-libs
          glibc
          gsl
-         kconfig5
-         kconfigwidgets5
-         kcoreaddons5
-         kcrash5
-         ki18n5
-         kio5
-         knewstuff5
-         knotifications5
-         knotifyconfig5
-         kplotting5
-         kwidgetsaddons5
-         kxmlgui5
+         kconfig
+         kconfigwidgets
+         kcoreaddons
+         kcrash
+         ki18n
+         kio
+         knewstuff
+         knotifications
+         knotifyconfig
+         kplotting
+         kwidgetsaddons
+         kxmlgui
          libindi
          libnova
          libraw
          libxisf
          opencv
-         qt5-base
-         qt5-datavis3d
-         qt5-declarative
-         qt5-quickcontrols
-         qt5-svg
-         qt5-websockets
-         qtkeychain-qt5
+         qt6-base
+         qt6-datavis3d
+         qt6-declarative
+         qt6-svg
+         qt6-websockets
+         qtkeychain-qt6
          stellarsolver
          wcslib
          zlib)
 makedepends=(eigen
              extra-cmake-modules
-             kdoctools5)
+             kdoctools)
 optdepends=('xplanet: XPlanet support')
 source=(https://download.kde.org/stable/$pkgname/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('ea1c163260062899a574bf1e4cb433cc1b2e9a4e6d845a2a1af9b6756934269a'
+sha256sums=('f2dbd6c26c45512aa7c3924f0bf0606a8ef978e468c54505dcc0cb2fe1200245'
             'SKIP')
 validpgpkeys=(259D9FCEE9175351965633696D9CE2AEE028C4F3) # Jasem Mutlaq <mutlaqja@ikarustech.com>
+
+prepare() {
+# Fix data install dir
+  sed -e 's|DATA_INSTALL_DIR|CMAKE_INSTALL_DATADIR|g' -i $pkgname-$pkgver/kstars/data/*/CMakeLists.txt
+}
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
     -DBUILD_TESTING=OFF \
+    -DBUILD_QT5=OFF \
     -DCMAKE_C_FLAGS="$CFLAGS -ffat-lto-objects" \
     -DCMAKE_CXX_FLAGS="$CXXFLAGS -ffat-lto-objects"
   cmake --build build
