--- a/world/libvirt/.artixlinux/pkgbase.yaml
+++ b/world/libvirt/.artixlinux/pkgbase.yaml
@@ -1,13 +1,4 @@
 ---
-pkgbase:
-  name: libvirt
-  version: 1:11.3.0-1
-  arch:
-    - x86_64
-  pkgname:
-    - libvirt
-    - libvirt-storage-gluster
-    - libvirt-storage-iscsi-direct
 actions:
   addRepo: world
   removeRepo: null
@@ -20,40 +11,52 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1:11.3.0-1
+    version: 1:11.4.0-1
     packages:
-      - libvirt-1:11.3.0-1-x86_64.pkg.tar.zst
-      - libvirt-storage-gluster-1:11.3.0-1-x86_64.pkg.tar.zst
-      - libvirt-storage-iscsi-direct-1:11.3.0-1-x86_64.pkg.tar.zst
+      - libvirt-1:11.4.0-1-x86_64.pkg.tar.zst
+      - libvirt-storage-gluster-1:11.4.0-1-x86_64.pkg.tar.zst
+      - libvirt-storage-iscsi-direct-1:11.4.0-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
