--- a/world/musl/.artixlinux/pkgbase.yaml
+++ b/world/musl/.artixlinux/pkgbase.yaml
@@ -1,13 +1,4 @@
 ---
-pkgbase:
-  name: musl
-  version: 1.2.5-5
-  arch:
-    - x86_64
-  pkgname:
-    - musl
-    - musl-aarch64
-    - musl-riscv64
 actions:
   addRepo: world
   removeRepo: null
@@ -20,40 +11,52 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1.2.5-5
+    version: 1.2.5-6
     packages:
-      - musl-1.2.5-5-x86_64.pkg.tar.zst
-      - musl-aarch64-1.2.5-5-x86_64.pkg.tar.zst
-      - musl-riscv64-1.2.5-5-x86_64.pkg.tar.zst
+      - musl-1.2.5-6-x86_64.pkg.tar.zst
+      - musl-aarch64-1.2.5-6-x86_64.pkg.tar.zst
+      - musl-riscv64-1.2.5-6-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
